Fixed spacing on devices page

--- a/Website/public/assets/css/dashboard.css
+++ b/Website/public/assets/css/dashboard.css
@@ -55,11 +55,11 @@ body {
   }
   
   .sidebar .nav-link.active {
-    color: #77C425;
+    color: #57B845;
   }
   
   .sidebar .nav-link.active .plantIcon {
-    color: #77C425;
+    color: #57B845;
     opacity: 1;
   }
 
